<resources>
    <string name="app_name">Secure Health</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="cancel">Cancel</string>
    <string name="patient_register">Patient Register</string>
    <string name="add_new_test">Add New Test</string>
    <string name="first_name">First Name: </string>
    <string name="last_name">Last Name: </string>
    <string name="department">Department: </string>
    <string name="nurse_id">Nurse ID: </string>
    <string name="room">Room: </string>
    <string name="test_list">Test List</string>

    <string name="phone">Phone: </string>
    <string name="address">Address: </string>
    <string name="dob">Day of Birth: </string>


    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>


</resources>