<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.user.LoginActivity">
    <LinearLayout
        android:layout_width="@dimen/login_width"
        android:layout_height="@dimen/login_height"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/loginImageButton"
            android:layout_width="@dimen/login_img_button_width"
            android:layout_height="@dimen/login_img_button_height"
            android:layout_centerHorizontal="true"
            android:background="?selectableItemBackgroundBorderless"
            android:scaleType="fitXY"
            android:src="@drawable/ic_login_button"
            android:tooltipText="Login" />

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="@dimen/login_txt_width"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:text="qhuyng@gmail.com"
            android:selectAllOnFocus="true"
            />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="@dimen/login_txt_width"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:text="123456789"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            />

        <TextView
            android:id="@+id/login_error"
            android:text="show error"
            android:textAlignment="textEnd"
            android:textColor="#E91E63"
            android:layout_width="@dimen/login_txt_width"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="@dimen/login_button_container_width"
            android:layout_height="@dimen/login_button_container_height"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="@dimen/login_button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:enabled="true"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/login_button"
                android:layout_margin="@dimen/small_margin"
                android:layout_width="@dimen/login_button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:enabled="true"
                android:text="@string/login" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>